--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <h1>Orbit Report</h1>
 <!-- Part 1-->
 <!-- <app-orbit-list [satellites]="sourceList"></app-orbit-list> --> 
+
 <app-orbit-list [satellites]="displayList"></app-orbit-list>
+
 <div class="search-form">
 	Search: <input #searchTerm type="text" (keyup.enter)="search(searchTerm.value);" name="searchTerm"/>
 	<button (click)="search(searchTerm.value);">Search</button>
@@ -9,4 +11,4 @@
 
 <app-orbit-counts [satellites]="displayList"></app-orbit-counts>
 
-<!-- TODO 1: add list component to app HTML -->ng
+<!-- TODO 1: add list component to app HTML -->
