--- a/src/app/orbit-list/orbit-list.component.html
+++ b/src/app/orbit-list/orbit-list.component.html
@@ -6,9 +6,9 @@
         <th>Orbit Type</th>
         <th>Launch Date</th>
     </tr>
-    <tr *ngFor="let list of satellites">
+    <tr class = "data-row" *ngFor="let list of satellites">
         <td>{{list.name}}</td>
-        <td [class.warning] = "list.shouldShowWarning()">{{list.type}}</td> 
+        <td [class.warning] = "list.isSpaceDebris()">{{list.type}}</td> 
         <td>{{list.operational}}</td>
         <td>{{list.orbitType}}</td>
         <td>{{list.launchDate}}</td>
